# cpp-glew-sample

./: CMakeLists.txt  README.md
Assets/: cube.fbx  saikoro.fbx
Shaders/: Basic.vert.glsl
src/: Game.cpp  Game.h
src/Actors/: Actor.cpp  Actor.h  Camera.cpp  Saikoro.cpp  Saikoro.h  Ship.cpp  Ship.h
src/Commons/: Math.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Components/: MeshComponent.cpp  MeshComponent.h  SpriteComponent.cpp  SpriteComponent.h
src/Shaders/: LambertFrag.glsl  PhongFrag.glsl  PhongVert.glsl  Sprite.frag.glsl  Sprite.vert.glsl  SpriteVert.glsl
